<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1.1"
            android:background="@color/onoff"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:background="@drawable/header2"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/generalsettings"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="50dp"
                    android:layout_weight="1.2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/continuesMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/continuous_mode"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/ibrText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/interval"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/soundLength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/soundLength"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/baseDirectory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/base_directory"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/demotext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/demo"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="250dp"
                    android:layout_weight="0.8"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/continuesModeCheckBox"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginTop="7dp"
                        android:background="@drawable/custom_checkbox"
                        android:button="@null"
                        android:checked="false"
                        android:onClick="enableContinuesMode" />

                    <EditText
                        android:id="@+id/timeBetRecordsText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:inputType="number"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/soundLengthButton"
                        style="@android:style/TextAppearance.Small.Inverse"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/combo"
                        android:gravity="start|center_vertical"
                        android:onClick="openSoundLengthDialog"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/soundLengthDefault"
                        android:textColor="@color/black"
                        android:textSize="12sp" />


                    <EditText
                        android:id="@+id/baseDirectoryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:enabled="false"
                        android:inputType="text|textNoSuggestions"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />

                    <CheckBox
                        android:id="@+id/demo_mode"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/custom_checkbox"
                        android:button="@null"
                        android:checked="false"
                        android:enabled="true" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/onoff"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/buttons"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/apply"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="bottom"
                        android:background="@drawable/buttons"
                        android:onClick="apply"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:text="@string/apply"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/clearSharedP"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="25dp"
                        android:background="@drawable/buttons"
                        android:onClick="deleteSharedP"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:text="@string/back_to_default_values"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>