<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="right"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tfsValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="00:00"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/white"
                        android:textIsSelectable="false"
                        android:textSize="16sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dip"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/white" />


            </LinearLayout>


            <ImageView
                android:id="@+id/settingsButton"
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:background="@drawable/settings_selector" />

            <ImageView
                android:id="@+id/icpClearButton"
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/clear_selector" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.3"
            android:background="@color/gray"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/start_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="-2dp"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/starter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:switchTextAppearance="@style/SwitchTextAppearance"
                android:textColor="@color/white"
                android:textOff="@string/off"
                android:textOn="@string/on"
                android:thumbTextPadding="20dp"
                android:track="@drawable/swither_rectangle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.7"
            android:background="@color/gray"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="0.9"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/demo_txtview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="5dp"
                        android:text="New Text"
                        android:textColor="@color/white"
                        android:textSize="10sp" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="0dp"
                        android:indeterminate="false"
                        android:max="100"
                        android:progress="60"
                        android:progressBackgroundTint="@color/pbarbg"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/pbarpercent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:text="0%"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/white"
                        android:textSize="10sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dip"
                    android:layout_marginLeft="9dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/pbarline" />


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="2dp"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:layout_marginTop="2dp"-->
        <!--android:layout_weight="0.4"-->
        <!--android:background="@drawable/signalborder"-->
        <!--android:orientation="vertical">-->

        <!--<LinearLayout-->
            <!--android:id="@+id/sentSignalWaveform1"-->
            <!--android:layout_width="650dp"-->
            <!--android:layout_height="90dp"-->
            <!--android:layout_marginLeft="-40dp"-->
            <!--android:layout_marginTop="-20dp"-->
            <!--android:orientation="horizontal" />-->
    <!--</LinearLayout>-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:layout_weight="0.4"
        android:background="@drawable/signalborder"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/sentSignalWaveform"
            android:layout_width="650dp"
            android:layout_height="280dp"
            android:layout_marginLeft="-40dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal" />
    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="2dp"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:layout_marginTop="2dp"-->
        <!--android:layout_weight="0.4"-->
        <!--android:background="@drawable/signalborder"-->
        <!--android:orientation="vertical">-->

        <!--<LinearLayout-->
            <!--android:id="@+id/sentSignalWaveform3"-->
            <!--android:layout_width="650dp"-->
            <!--android:layout_height="90dp"-->
            <!--android:layout_marginLeft="-40dp"-->
            <!--android:layout_marginTop="-20dp"-->
            <!--android:orientation="horizontal" />-->

    <!--</LinearLayout>-->
</LinearLayout>